test(auth): validate JWT creation and verification with classpath-based key loading